<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"
        android:icon="@drawable/action_settings"/>

        <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"
        android:icon="@drawable/action_share2"/>
        
        <item
        android:id="@+id/idevitylogo"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        android:title="@string/idevity"
        android:icon="@drawable/id_logo"/>
        
        <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:title="@string/action_about"
        android:icon="@drawable/action_about"/>
</menu>