<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".CardLayout" >
     <LinearLayout
        android:baselineAligned="false" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1" >
		    <ImageView
		        android:id="@+id/zone0photo"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
        		android:contentDescription="@string/cardholder_photo"
		        android:src="@drawable/zone0photo" />	 
	    </LinearLayout>  
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
	      	<TextView
	      	    android:id="@+id/zone19_expdate"
	      	    style="@style/Inputtext_bold_large"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
	      	    android:text="@string/zone19_expdate" />
	      	<TextView
	      	    android:id="@+id/zone20_affiliation"
	      	    style="@style/Inputtext_bold_large"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
	      	    android:layout_below="@+id/zone19_expdate"
	      	    android:text="@string/zone20_affiliation" />	   

	       	<TextView
	       	    android:id="@+id/zone8_affiliation_text"
	       	    style="@style/Inputtext1"
	       	    android:layout_width="fill_parent"
	       	    android:layout_height="wrap_content"
	       	    android:layout_below="@+id/zone20_affiliation"
	       	    android:text="@string/zone8_affiliation" />	   
	       	<TextView
	       	    android:id="@+id/zone8_affiliation"
	       	    style="@style/Inputtext_bold"
	       	    android:layout_width="fill_parent"
	       	    android:layout_height="wrap_content"
	       	    android:layout_below="@+id/zone8_affiliation_text"
	       	    android:text="@string/zone8_affiliation" />	 
	       <TextView
	      	    android:id="@+id/zone10_agency_text"
	      	    style="@style/Inputtext1"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
	      	    android:layout_below="@+id/zone8_affiliation"
	      	    android:text="@string/zone10_agency_text" />
	       <TextView
	      	    android:id="@+id/zone10_agency"
	      	    style="@style/Inputtext_bold"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
	      	    android:layout_below="@+id/zone10_agency_text"
	      	    android:text="@string/zone10_agency" />
	       <TextView
	      	    android:id="@+id/zone14_expdate_text"
	      	    style="@style/Inputtext1"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
	      	    android:layout_below="@+id/zone10_agency"
	      	    android:text="@string/zone14_expdate_text" />
	       <TextView
	      	    android:id="@+id/zone14_expdate"
	      	    style="@style/Inputtext_bold"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
	      	    android:layout_below="@+id/zone14_expdate_text"
	      	    android:text="@string/zone14_expdate" />
 	
	    </RelativeLayout>	    	    
	 </LinearLayout>	 
     <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="#008000">

      	<TextView
      	    android:id="@+id/zone2_lastname"
      	    style="@style/Inputtext_bold_large"
      	    android:layout_width="fill_parent"
      	    android:layout_height="wrap_content"
      	    android:layout_marginLeft="10dp"
      	    android:text="@string/zone2_lastname" />	   
      	<TextView
      	    android:id="@+id/zone2_first_middle_name"
      	    style="@style/Inputtext_bold_large"
      	    android:layout_width="fill_parent"
      	    android:layout_height="wrap_content"
      	    android:layout_marginLeft="10dp"
      	    android:text="@string/zone2_first_middle_name" />
	       		        	      		    
	 </LinearLayout>
</LinearLayout>