<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/idevitylogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/idevity_logo"
        android:src="@drawable/idevity_logo_9" />

    <TextView
        android:id="@+id/nfc_disabled_warn"
        style="@style/Labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idevitylogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="188dp"
        android:text="@string/nfc_disabled_warn" />

    <TextView
        android:id="@+id/plug_in_usb_warn"
        style="@style/Labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idevitylogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="188dp"
        android:text="@string/plug_in_usb_warn" />
 
    <TextView
        android:id="@+id/nfc_disabled_warn_or_usb_not_plugged_in"
        style="@style/Labels"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idevitylogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="188dp"
        android:text="@string/nfc_disabled_warn_or_usb_not_plugged_in" />

    
</RelativeLayout>
